@@ -1,4 +1,4 @@
 DIST maven-artifact-test-2.0.tar.bz2 5409 RMD160 6ffa9bac7aac1e9a70c5435e2c691a1db05a424f SHA1 490aad91cdcf39f77b01342a77cb90a0470cc2fd SHA256 8f1a764e53b59b49b3523aaf92e5348e7511c3f27219bb7ad3c28a006f9f8b94
-EBUILD maven-artifact-test-2.0.ebuild 803 RMD160 771547af300f0252b1da8bdce11ed053b4063025 SHA1 6e9081b06aaf41292c813b0f5cea4b44f4c0038a SHA256 01332c7d581b5cb3d32ffe9bfc2aff0b1ede56b76a873b7a78620beffc135054
-MISC ChangeLog 267 RMD160 56246e156d53b8f15d4f40a2b4fcd4d5df746c40 SHA1 f8b09cf579890fdbcc214fb21d10793f1f54d14e SHA256 cf6f794056aa01c522e7ed25d990af3db0f192db3bcb0509b75cc566fa159938
+EBUILD maven-artifact-test-2.0.ebuild 874 RMD160 9bd1a4d535260c4b2d34eacda9991fc1c4f15ed4 SHA1 051d4ae0a8f4cde123448c1b17b587cb9dee6d19 SHA256 26b701c35afef6ec1a20a03da55e0b551d577d7698faf1c2b75bac4d396b3e6e
+MISC ChangeLog 395 RMD160 02345ace194888a5f6478ca6a69cbc19553f157d SHA1 600d11974c320d38c37b19ca1ea5ceb61fa14d82 SHA256 4c37ff4a8969c62bf9adbde8b7436b3ed806bcb17356babf0ea57f5202f7a096
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
