@@ -2,6 +2,8 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+JAVA_PKG_IUSE="source"
+
 inherit java-maven-2
 
 DESCRIPTION="Maven is a software project management and comprehension tool."
@@ -9,8 +11,8 @@ SRC_URI="http://dev.gentooexperimental.org/~kiorky/${P}.tar.bz2"
 HOMEPAGE="http://maven.apache.org/"
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS="~x86"
-IUSE="source doc"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
 DEP="dev-java/maven-artifact
 dev-java/maven-artifact-manager
 dev-java/maven-settings
@@ -28,3 +30,5 @@ maven-settings
 plexus-utils
 plexus-container-default-1.0_alpha9"
 
+RESTRICT=test
+JAVA_PKG_SRC_DIRS="src/main/java/*"
